# gopro-stitch-uploader

./: .gitignore  PRIVACY.md  README.md  TERMS.md  pyproject.toml
src/gopro_stitch/: __init__.py  __main__.py  auth.py  config.py  scanner.py  stitcher.py  uploader.py
tests/: test_scanner.py  test_uploader.py
