[project]
name = "gopro-youtube-stitch"
version = "0.1.0"
description = "Stitch GoPro chapter files and stream them straight to YouTube as unlisted, without writing the combined video to disk."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "google-auth>=2.0",
    "google-auth-oauthlib>=1.0",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
gopro-stitch = "gopro_stitch.__main__:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
